--- a/HaRepacker/GUI/Panels/SubPanels/ChangeableTextBox.xaml
+++ b/HaRepacker/GUI/Panels/SubPanels/ChangeableTextBox.xaml
@@ -21,7 +21,7 @@
             
             <TextBox x:Name="textBox" Grid.Column="1"
                              Background="White" BorderBrush="White" FontSize="16" TextWrapping="{Binding TextWrap}"
-                     TextChanged="textBox_TextChanged"/>
+                     TextChanged="textBox_TextChanged" AcceptsReturn="{Binding AcceptsReturn}"/>
             
             <Button x:Name="applyButton" Content="Apply" Grid.Column="2" MaxHeight="40" MinHeight="30" VerticalAlignment="Top"
                     Click="applyButton_Click"/>
