--- a/HaRepacker/GUI/Panels/SubPanels/SoundPlayer.xaml
+++ b/HaRepacker/GUI/Panels/SubPanels/SoundPlayer.xaml
@@ -3,14 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HaRepacker.GUI.Panels.SubPanels"
              mc:Ignorable="d" 
              d:DesignHeight="139" d:DesignWidth="465">
     
     <Grid Height="139" Width="465" Background="Gray">
         <Grid.RowDefinitions>
             <RowDefinition Height="5*"/>
-            <RowDefinition Height="5*"/>
+            <RowDefinition Height="4*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -34,6 +34,21 @@
         
         <Slider x:Name="slider1" Grid.Row="1" Margin="5" Value="0" Maximum="100" Minimum="0"
                 ValueChanged="slider1_ValueChanged"/>
+
+        <Grid Grid.Row="2" Margin="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="5*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Text="Volume: " VerticalAlignment="Center"
+                       Foreground="White"
+                       HorizontalAlignment="Right" Grid.Column="0"/>
+
+            <Slider x:Name="slider_volume" Value="50" Maximum="100" Minimum="0" Grid.Column="1"
+                Width="200" HorizontalAlignment="Right"
+                ValueChanged="slider_volume_ValueChanged"/>
+        </Grid>
 
     </Grid>
 </UserControl>
